Fixed white space at top of webpage

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,8 +10,10 @@ body {
 #banner {
     height: 400px;
     background-color: aquamarine;
-
+    margin: 0;
+    padding: 0; 
 }
+
 
 main {
     float: left;
@@ -86,8 +88,14 @@ nav {
     width: 33.33333333333333%;
     margin-left: auto;
     margin-right: auto;
+    padding: 10px;
     background-color: red;
     text-align: justify;
+}
+
+.col-3 h4{
+    margin-top: 0;
+    margin-bottom: 5px;
 }
 
 
